testsuite/tests/interpreter_errors/struct_pattern/both_destructuring_and_field_details/test.out
script.lkql:10:15: error: Destructuring is incompatible with named field access
  10 |     case Pair(x, y: _) => print("should raise error")
     |               ^^^^^^^

